# python_project_template

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: run_tests.yml
docs/: contributing.md  pull_request_template.md
examples/: print_version.py  use_adder.py
project_template/: __init__.py
tests/: test_file.py
