[build-system]
requires = [
    "setuptools", 
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name =  "project_template"
description = "A generic interface to generate a virtual buddy"
dynamic = ["version"]
authors = [
    {name = "Pariterre", email = "pariterre@hotmail.com"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]
requires-python = ">=3.10"
dependencies = [
    "numpy", 
]

# Any dev dependencies can go here. Also, if a package is not available on pip, it should be referenced here
[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Documentation = "https://github.com/pyomeca/python_project_template/tree/main#readme"
Source = "https://github.com/pyomeca/python_project_template"
Tracker = "https://github.com/pyomeca/python_project_template/issues"

[tool.setuptools]
packages = ["project_template"]

[tool.setuptools.dynamic]
version = {attr = "project_template.version.__version__"}

# Auto-discover all packages inside the repo root
[tool.setuptools.packages.find]
where = ["."]
include = ["project_template*"]

# Any non *.py files that must be bundled with the package must be listed here. ** and * wildcards can be used
[tool.setuptools.package-data]
project_template = []

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
